@@ -1,3 +1,4 @@
+require 'date'
 require 'json'
 require 'open-uri'
 require 'reverse_markdown'
@@ -6,31 +7,30 @@ module VpsFree::Irc::Bot
   class WebEventLog
     include Cinch::Plugin
     include Helpers
+    include Api
 
-    set required_options: %i(webui_url)
     timer 60, method: :check, threaded: false
 
     def check
-      @url ||= URI.join(config[:webui_url], 'event_log.php')
-      @since ||= Time.now.to_i
+      client do |api|
+        @since ||= Time.now
 
-      @url.query = "since=#{@since.to_i}"
+        events = api.news_log.list(since: @since.iso8601)
 
-      events = JSON.parse(@url.read, symbolize_names: true)
-
-      events.each do |e|
-        bot.channels.each do |channel|
-          log_mutable_send(
-              channel,
-              "News from vpsAdmin: "+
-              "[#{Time.at(e[:timestamp]).strftime('%Y-%m-%d %H:%M')}] "+
-              ReverseMarkdown.convert(e[:message]).strip
-          )
+        events.each do |e|
+          bot.channels.each do |channel|
+            log_mutable_send(
+                channel,
+                "News from vpsAdmin: "+
+                "[#{DateTime.iso8601(e.published_at).to_time.strftime('%Y-%m-%d %H:%M')}] "+
+                ReverseMarkdown.convert(e.message).strip
+            )
+          end
         end
-      end
 
-      @since = Time.now.to_i if events.any?
-      
+        @since = Time.now if events.any?
+      end
+        
     rescue => e
       exception(e)
     end
