@@ -1,4 +1,5 @@
 - API support has been moved to a standalone module
+- WebEventLog: use the API to fetch news
 
 * Wed Feb 01 2017 - version 0.3.0
 - Support for commands with same prefixes
